--- a/pages/filmes/F1.html
+++ b/pages/filmes/F1.html
@@ -71,6 +71,7 @@
               </table>
             </div>
             <div class='mob-sess'>
+              <h3>Sessões</h3>
               <table>
                 <tbody>
                   <tr>
@@ -156,11 +157,10 @@
         </table>
         <table class="mob-price">
           <tbody>
-
             <tr>
               <th class='entradas'>Entradas</th>
-              <th>Seg. a Quin.</th>
-              <th>Sex. a Dom.</th>
+              <th class='semana'>Seg. a Quin.</th>
+              <th class='fimsemana'>Sex. a Dom.</th>
               <th class='last-cel'></th>
             </tr>
 
