--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="../css/pages.css">
-	<link rel="stylesheet" href="../css/carousel.css">
-	<link rel="stylesheet" href="../css/animations.css">
+  <link rel="stylesheet" href="../css/carousel.css">
+  <link rel="stylesheet" href="../css/animations.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" href="../../img/icone.svg">
   <title>Cinetech</title>
 </head>
@@ -32,93 +32,109 @@
 
     <main class="content">
       <div class="sobre">
-				<div class="texto text-focus-in">
-	        <h2>Quem somos? </h2>
-	        <p>Apaixonados pelo oque fazemos, estamos no ramo do cinema há mais de 15 anos, sempre trazendo grandes lançamentos para nossas telas.</p>
-	        <p>Acreditamos que filmes são a emoção da maneira mais pura, filmes nos fazem rir, chorar e viver grandes
-	          aventuras.</p>
-	        <p>Atualmente, graças as evoluções tecnológicas a relação empresa-cliente ficou ainda melhor, estamos aqui para te
-	          ofertar
-	          as melhores promoções e também deixamos contatos para elogios, criticas ou informações.
-					</p>
-          <p>Nossa empresa é bem avaliada pelos nossos clientes através do google: </p>
-	        <h2>Nossa estrutura</h2>
-          <p>Temos um hall para recepção de clientes, onde são vendidos os ingressos e acompanhamentos, como pipoca, refrigerante e entre outras coisas.</p>
-	        <p>Oferecemos a melhor estrutura, com cadeiras do tipo reclinavel com espuma confortável, sala com capacidade para 100 pessoas, com seis excelentes caixas de som acustica e tela que dispõe da melhor tecnologia. </p>
-          <p>Todo nosso prédio é acessível, ou seja possui rampa de acesso para cadeirantes, o piso tátil para deficientes visuais e sessões de filmes com audiodescrição.*</p>
-            <p>As salas possuem
-	          duas saídas de incêndio, sensores de gás e fumaça, escadarias retroilumindas e carpete de veludo na cor cinza.</p>
-          <j><a href='../index.html'> Evite filas, compre através do nosso site, para garantir o seu conforto.</a></j>
-          </br>
-          <ji>*Conferir a sessão com antecedência através do nosso site</ji>
-				</div>
-				<nav class="slide">
-      	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-       	 <div class="carousel-indicators">
-	          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-	          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-	          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
-	        </div>
-	        <div class="carousel-inner">
-	          <div class="carousel-item active">
-	            <img src="../../img/cinema 1.jpg" class="d-block w-100" alt="Cartaz 1">
-	          </div>
-	          <div class="carousel-item">
-	            <img src="../../img/cinema 2.jpg" class="d-block w-100" alt="Cartaz 2">
-	          </div>
-	          <div class="carousel-item">
-	            <img src="../../img/cinema 3.jpg" class="d-block w-100" alt="Cartaz 3">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 4.jpg" class="d-block w-100" alt="Cartaz 4">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 5.jpg" class="d-block w-100" alt="Cartaz 5">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 6.jpg" class="d-block w-100" alt="Cartaz 6">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 7.jpg" class="d-block w-100" alt="Cartaz 7">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 8.jpg" class="d-block w-100" alt="Cartaz 8">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 9.jpg" class="d-block w-100" alt="Cartaz 9">
-	          </div>
-						<div class="carousel-item">
-	            <img src="../../img/cinema 10.jpg" class="d-block w-100" alt="Cartaz 10">
-	          </div>
-	        </div>
-	        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-	          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	          <span class="visually-hidden">Previous</span>
-	        </button>
-	        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-	          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	          <span class="visually-hidden">Next</span>
-	        </button>
-      </div>
-    </nav>
-				<div class="localização">
-	        <h1 style="text-align: center;">Localização</h1>
-					<br>
-	        <div class="mapa">
-						<iframe class="col-wide"
-	            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15835.669117429874!2d-34.8734703!3d-7.1355643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf5445223401f2bb!2sIFPB%20-%20Campus%20Jo%C3%A3o%20Pessoa!5e0!3m2!1spt-BR!2sbr!4v1667833327788!5m2!1spt-BR!2sbr"
-	            width="530" height="430" style="border:0;" allowfullscreen="" loading="lazy"
-	            referrerpolicy="no-referrer-when-downgrade"></iframe>
-	        </div>		
-	      </div>
+        <div class="texto text-focus-in">
+          <h2>Quem somos ? </h2>
+          <p>Apaixonados pelo o que fazemos, estamos no ramo do cinema há mais de 15 anos, trazendo sempre grandes
+            lançamentos para nossas telas.</p>
+          <p>Acreditamos que filmes são a emoção da maneira mais pura. Filmes nos fazem rir, chorar e viver grandes
+            aventuras.</p>
+          <p>Atualmente, graças as evoluções tecnológicas, a relação empresa-cliente ficou ainda melhor. Estamos aqui
+            para te ofertar as melhores promoções, além de também deixarmos contatos para elogios, críticas ou
+            informações.
+          </p>
+          <h2>Nossa estrutura :</h2>
+          <p>Temos um hall para recepção de clientes, onde são vendidos os ingressos e acompanhamentos, como pipoca,
+            refrigerante, entre outras coisas.</p>
+          <p>Oferecemos a melhor estrutura com cadeiras do tipo reclinável que possuem espuma confortável, sala com
+            capacidade para 100 pessoas, dispondo de seis excelentes caixas de som acústica e tela com tecnologia
+            avançada.
+          </p>
+          <p>Nosso prédio também é acessível! Contamos com rampa de acesso para cadeirantes, piso tátil para deficientes
+            visuais e sessões de filmes com audiodescrição (conferir a sessão com antecedência através do nosso site).
+          </p>
+          <p>Além de tudo isso, as salas ainda possuem duas saídas de incêndio, sensores de gás e fumaça, escadarias
+            retroiluminadas e carpete de veludo na cor cinza.</p>
+          <j><a href='../index.html'> Evite filas e garanta seu conforto, compre através do nosso site!</a></j>
         </div>
+        <nav class="slide">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+                aria-label="Slide 8"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+                aria-label="Slide 9"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
+                aria-label="Slide 10"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../../img/cinema 1.jpg" class="d-block w-100" alt="Cartaz 1">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 2.jpg" class="d-block w-100" alt="Cartaz 2">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 3.jpg" class="d-block w-100" alt="Cartaz 3">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 4.jpg" class="d-block w-100" alt="Cartaz 4">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 5.jpg" class="d-block w-100" alt="Cartaz 5">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 6.jpg" class="d-block w-100" alt="Cartaz 6">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 7.jpg" class="d-block w-100" alt="Cartaz 7">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 8.jpg" class="d-block w-100" alt="Cartaz 8">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 9.jpg" class="d-block w-100" alt="Cartaz 9">
+              </div>
+              <div class="carousel-item">
+                <img src="../../img/cinema 10.jpg" class="d-block w-100" alt="Cartaz 10">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </nav>
+        <div class="localização">
+          <h1 style="text-align: center;">Localização</h1>
+          <br>
+          <div class="mapa">
+            <iframe class="col-wide"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15835.669117429874!2d-34.8734703!3d-7.1355643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf5445223401f2bb!2sIFPB%20-%20Campus%20Jo%C3%A3o%20Pessoa!5e0!3m2!1spt-BR!2sbr!4v1667833327788!5m2!1spt-BR!2sbr"
+              width="530" height="430" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer" id="f">
       <section class="fale-conosco">
@@ -149,8 +165,8 @@
           <h1>Localização</h1>
         </div>
         <div>
-					<a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
-				</div>
+          <a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
+        </div>
       </section>
 
       <section class="copyright col-wide">
