--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="css/carousel.css">
-	<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/carousel.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" href="img/icone.svg">
   <title>Cinetech</title>
 </head>
@@ -30,11 +30,14 @@
     </header>
 
     <nav class="slide">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+      <div id="carouselExampleIndicators" class="carousel" data-bs-ride="true">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -47,22 +50,27 @@
             <img src="img/Cartaz 3.png" class="d-block w-100" alt="Cartaz 3">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="carousel-mobile">
+        <img src="img/Cartaz 1.png" alt="Cartaz 1">
+      </div>
     </nav>
-		
+
     <main class="content">
       <div class="titulo col-wide" id="movie">
         <h2> Filmes em cartaz </h2>
       </div>
-      <div class="scrollmenu">
+      <div class="scrollmenu ">
         <a href='pages/filmes/F1.html'><img src="img/adão negro.jpg" alt='Adão Negro'></a>
         <a href='pages/filmes/F2.html'><img src="img/Avatar.jpeg" alt='Avatar'></a>
         <a href='pages/filmes/F3.html'><img src="img/divertida mente.jpg" alt='Divertida mente'></a>
@@ -91,8 +99,8 @@
               alt='Vingadores:Ultimato'>
             <h2 class='text-item'>Vingadores: Ultimato</h2>
           </a>
-        </div> 
-			</div>
+        </div>
+      </div>
 
     </main>
 
@@ -125,9 +133,9 @@
           <h1>Localização</h1>
         </div>
         <div>
-					<a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
-				</div>
-      
+          <a href="https://goo.gl/maps/rNH9AvDaHqWQU7JP8">Av. Primeiro de Maio, 720 - Jaguaribe</a>
+        </div>
+
       </section>
 
       <section class="copyright col-wide">
