--- a/pages/filmes/F3.html
+++ b/pages/filmes/F3.html
@@ -31,6 +31,7 @@
     <main class="content">
 
       <div class='movie'>
+        <h1 class='filmetit'>Divertida Mente</h1>
         <img src="../../img/divertida mente.jpg" alt="Divertida Mente">
         <div class="detalhes">
           <h1>Divertida mente</h1>
@@ -69,6 +70,25 @@
                   </tr>
               </table>
             </div>
+            <div class='mob-sess'>
+              <h3>Sessões</h3>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>Segunda a Quinta</td>
+                  </tr>
+                  <tr>
+                    <td>14:00 - 16:00 - 18:00</td>
+                  </tr>
+                  <tr>
+                    <td>Sexta a Domingo</td>
+                  </tr>
+                  <tr>
+                    <td>14:30 - 16:30 - 18:30</td>
+                  </tr>
+                <tbody>
+              </table>
+            </div>
           </div>
         </div>
 
@@ -77,7 +97,7 @@
         <h1>Tabela de preços</h1><img src="../../img/ticket.svg">
       </div>
       <div class="preços">
-        <table>
+        <table class='tabela'>
           <thead>
             <tr>
               <th class='topcel'></th>
@@ -114,23 +134,85 @@
               <td class='botcel'></td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="mob-price">
+          <tbody>
+
+            <tr>
+              <th class='entradas'>Entradas</th>
+              <th class='semana'>Seg. a Quin.</th>
+              <th class='fimsemana'>Sex. a Dom.</th>
+              <th class='last-cel'></th>
+            </tr>
+
+
+            <tr>
+              <td class='meia'>Meia</td>
+              <td>R$ 10,00</td>
+              <td>R$ 15,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td class='inteira'>Inteira</td>
+              <td>R$ 20,00</td>
+              <td>R$ 30,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Meia<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 13,00</td>
+              <td>R$ 18,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Inteira<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 26,00</td>
+              <td>R$ 36,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/divertida-mente?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
               </td>
             </tr>
           </tbody>
