--- a/pages/filmes/F6.html
+++ b/pages/filmes/F6.html
@@ -31,6 +31,7 @@
     <main class="content">
 
       <div class='movie'>
+        <h1 class='filmetit'>Vingadores: Ultimato</h1>
         <img src="../../img/vingadores - ultimato.jpg" alt="Vingadores: Ultimato">
         <div class="detalhes">
           <h1>Vingadores: Ultimato</h1>
@@ -61,12 +62,30 @@
                     <td>Seg. a Quin.</td>
                     <td>15:00 - 18:20 - 21:30</td>
                   </tr>
-                </tbody>
-                <tbody>
                   <tr>
                     <td>Sex. a Dom.</td>
                     <td>16:00 - 19:30 - 22:20</td>
                   </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class='mob-sess'>
+              <h3>Sessões</h3>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>Segunda a Quinta</td>
+                  </tr>
+                  <tr>
+                    <td>15:00 - 18:20 - 21:30</td>
+                  </tr>
+                  <tr>
+                    <td>Sexta a Domingo</td>
+                  </tr>
+                  <tr>
+                    <td>116:00 - 19:30 - 22:20</td>
+                  </tr>
+                <tbody>
               </table>
             </div>
           </div>
@@ -77,7 +96,7 @@
         <h1>Tabela de preços</h1><img src="../../img/ticket.svg">
       </div>
       <div class="preços">
-        <table>
+        <table class='tabela'>
           <thead>
             <tr>
               <th class='topcel'></th>
@@ -114,23 +133,83 @@
               <td class='botcel'></td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
               </td>
               <td>
                 <div class='compre'><a
-                    href="https://www.ingresso.com/filme/adao-negro?city=sao-paulo&partnership=home&target=em-cartaz#!#data=20221104">Compre
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
                     aqui <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="mob-price">
+          <tbody>
+
+            <tr>
+              <th class='entradas'>Entradas</th>
+              <th class='semana'>Seg. a Quin.</th>
+              <th class='fimsemana'>Sex. a Dom.</th>
+              <th class='last-cel'></th>
+            </tr>
+            <tr>
+              <td class='meia'>Meia</td>
+              <td>R$ 10,00</td>
+              <td>R$ 15,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td>Inteira</td>
+              <td>R$ 20,00</td>
+              <td>R$ 30,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Meia<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 13,00</td>
+              <td>R$ 18,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
+              </td>
+
+            </tr>
+            <tr>
+              <td>
+                <div class='imgddd'>
+                  Inteira<img src="../../img/óculos 3d 2.svg">
+                </div>
+              </td>
+              <td>R$ 26,00</td>
+              <td>R$ 36,00</td>
+              <td>
+                <div class='compre'><a
+                    href="https://www.ingresso.com/filme/vingadores-ultimato?city=sao-paulo&partnership=home">Compre
+                    <img src="../../img/ingresso.com.svg"></a></div>
               </td>
             </tr>
           </tbody>
