--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="icon" href="../../img/icone.svg">
+  <link rel="icon" href="../img/icone.svg">
   <title>Cinetech</title>
 </head>
 
@@ -82,34 +82,34 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../../img/cinema 1.jpg" class="d-block w-100" alt="Cartaz 1">
+                <img src="../img/cinema 1.jpg" class="d-block w-100" alt="Cartaz 1">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 2.jpg" class="d-block w-100" alt="Cartaz 2">
+                <img src="../img/cinema 2.jpg" class="d-block w-100" alt="Cartaz 2">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 3.jpg" class="d-block w-100" alt="Cartaz 3">
+                <img src="../img/cinema 3.jpg" class="d-block w-100" alt="Cartaz 3">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 4.jpg" class="d-block w-100" alt="Cartaz 4">
+                <img src="../img/cinema 4.jpg" class="d-block w-100" alt="Cartaz 4">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 5.jpg" class="d-block w-100" alt="Cartaz 5">
+                <img src="../img/cinema 5.jpg" class="d-block w-100" alt="Cartaz 5">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 6.jpg" class="d-block w-100" alt="Cartaz 6">
+                <img src="../img/cinema 6.jpg" class="d-block w-100" alt="Cartaz 6">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 7.jpg" class="d-block w-100" alt="Cartaz 7">
+                <img src="../img/cinema 7.jpg" class="d-block w-100" alt="Cartaz 7">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 8.jpg" class="d-block w-100" alt="Cartaz 8">
+                <img src="../img/cinema 8.jpg" class="d-block w-100" alt="Cartaz 8">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 9.jpg" class="d-block w-100" alt="Cartaz 9">
+                <img src="../img/cinema 9.jpg" class="d-block w-100" alt="Cartaz 9">
               </div>
               <div class="carousel-item">
-                <img src="../../img/cinema 10.jpg" class="d-block w-100" alt="Cartaz 10">
+                <img src="../img/cinema 10.jpg" class="d-block w-100" alt="Cartaz 10">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
