--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -22,7 +22,7 @@
   <div class="layout">
 
     <header class="header">
-      <a href="../index.html" class="logo"><img src="../../img/logo.svg" alt="Cinetech"></a>
+      <a href="../index.html" class="logo"><img src="../img/logo.svg" alt="Cinetech"></a>
       <nav>
         <ul class="menu">
           <li><a href="../index.html">Home</a></li>
